error.log
./src/physics.cpp: In function ‘Vector3d nbody::vecAcc(std::vector<nbody::Body>, Vector3d, double)’:
./src/physics.cpp:14:10: error: no match for ‘operator+=’ (operand types are ‘Vector3d {aka Vector3<double>}’ and ‘const Vector3<double>’)
    new_a += 6.67384 * pow(10, -11) * m_1  * (r1-syslist[i].get_r()) / pow(distance, 3)
          ^
./src/physics.cpp:17:3: error: expected ‘;’ before ‘}’ token
   }
   ^
./src/physics.cpp: In function ‘Vector3d nbody::vecVel(std::vector<nbody::Body>, Vector3d, Vector3d, Vector3d, double)’:
./src/physics.cpp:23:26: error: missing template arguments before ‘(’ token
  Vector3d new_v = Vector3(0.0,0.0,0.0);
                          ^
./src/physics.cpp:27:10: error: no match for ‘operator+=’ (operand types are ‘Vector3d {aka Vector3<double>}’ and ‘const Vector3<double>’)
    new_v += v1 + a1 * dt;
          ^
./src/physics.cpp: In function ‘Vector3d nbody::vecPos(std::vector<nbody::Body>, Vector3d, Vector3d, Vector3d, double)’:
./src/physics.cpp:39:33: error: no match for ‘operator*’ (operand types are ‘float’ and ‘Vector3d {aka Vector3<double>}’)
    new_r += r1 + v1 * dt + 0.5f * a1 * dt * dt;
                                 ^
./src/physics.cpp:39:33: note: candidates are:
In file included from ./install/include/nbody/physics.h:5:0,
                 from ./src/physics.cpp:1:
./install/include/nbody/VECTOR3.h:50:25: note: template<class T> const Vector3<T> operator*(const Vector3<T>&, T)
 inline const Vector3<T> operator*( const Vector3<T> &a, T b ) {
                         ^
./install/include/nbody/VECTOR3.h:50:25: note:   template argument deduction/substitution failed:
./src/physics.cpp:39:35: note:   mismatched types ‘const Vector3<T>’ and ‘float’
    new_r += r1 + v1 * dt + 0.5f * a1 * dt * dt;
                                   ^
In file included from ./install/include/nbody/physics.h:5:0,
                 from ./src/physics.cpp:1:
./install/include/nbody/VECTOR3.h:56:25: note: template<class T> const Vector3<T> operator*(T, const Vector3<T>&)
 inline const Vector3<T> operator*( T a, const Vector3<T> &b ) {
                         ^
./install/include/nbody/VECTOR3.h:56:25: note:   template argument deduction/substitution failed:
./src/physics.cpp:39:35: note:   deduced conflicting types for parameter ‘T’ (‘float’ and ‘double’)
    new_r += r1 + v1 * dt + 0.5f * a1 * dt * dt;
                                   ^
make: *** [build/nbody/physics.o] Error 1
